# KDump

./: .gitignore  Cargo.toml  README.md  benchmark_me  benchmark_me.ksm  locktest.ksm  testfolding.ksm  testko.ko  testvariable  testvariable.ksm  testvariable_info.ksm
src/: lib.rs  main.rs
src/argument/: mod.rs
src/coloredout/: mod.rs
src/fio/: mod.rs
src/instruction/: mod.rs
src/ko_output/: mod.rs
src/ksm_reader/: mod.rs  sections.rs
src/opcode/: mod.rs
src/output/: ko.rs  ksm.rs  mod.rs
tests/: cli_tests.rs
tests/inputs/: kash.ksm  test.ko
wix/: main.wxs
