[package]
name = "kdump"
version = "1.6.11"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A small utility that disassembles and reads KSM and KO files for use with KerbalOS."
homepage = "https://github.com/newcomb-luke/KDump"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.34.0"
termcolor = "1.1"
kerbalobjects = "3.1.13"
flate2 = "1.0"
