[package]
name = "kdump"
version = "2.0.1"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "A small utility that disassembles and reads KSM and KO files for use with KerbalOS."
homepage = "https://github.com/newcomb-luke/KDump"
readme = "README.md"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
termcolor = "1.1"
kerbalobjects = "4.0.2"
flate2 = "1.0"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
